# intro-tamer

./: .gitignore  EXAMPLE_USAGE.md  README.md  process_all_seasons.py  pyproject.toml  requirements.txt
intro_tamer/: __init__.py  cli.py  extract_audio.py  ffmpeg_render.py  gui.py  loudness.py  media_probe.py  presets.py  preview.py  reporting.py
intro_tamer/intro_detect/: __init__.py  fingerprint.py  heuristic.py
presets/: office-us.json
